# open-codex

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  LICENSE  NOTICE  PNPM.md  README.md  cliff.toml  flake.nix  package.json
.devcontainer/: README.md  devcontainer.json
.github/: dependabot.yaml  dotslash-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: 2-bug-report.yml  4-feature-request.yml
.github/icodex/labels/: codex-rust-review.md
.github/workflows/: ci.yml  cla.yml  codespell.yml  rust-ci.yml  rust-release.yml
codex-cli/: LMI_INTEGRATION.md  package.json
codex-cli/scripts/: setup-lmi-providers.js
codex-cli/src/: lmi-cli.js  provider-manager.js
codex-rs/: Cargo.toml
codex-rs/ansi-escape/: Cargo.toml
codex-rs/apply-patch/: Cargo.toml
codex-rs/arg0/: Cargo.toml
codex-rs/chatgpt/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/common/: Cargo.toml
codex-rs/core/: Cargo.toml
codex-rs/core/src/: client.rs  lib.rs  lmi_bridge_client.rs  model_provider_info.rs
codex-rs/core/tests/common/: Cargo.toml
codex-rs/exec/: Cargo.toml
codex-rs/execpolicy/: Cargo.toml
codex-rs/file-search/: Cargo.toml
codex-rs/linux-sandbox/: Cargo.toml
codex-rs/login/: Cargo.toml
codex-rs/mcp-client/: Cargo.toml
codex-rs/mcp-server/: Cargo.toml
codex-rs/mcp-server/tests/common/: Cargo.toml
codex-rs/ollama/: Cargo.toml
codex-rs/protocol/: Cargo.toml
codex-rs/protocol-ts/: Cargo.toml
codex-rs/tui/: Cargo.toml
docs/: CLA.md  advanced.md  authentication.md  config.md  contributing.md  faq.md  getting-started.md  install.md  open-source-fund.md  platform-sandboxing.md  prompts.md  release_management.md  sandbox.md  zdr.md
icodex-cli/: .gitignore  Dockerfile  LMI_INTEGRATION.md  package-lock.json  package.json
icodex-cli/scripts/: README.md  build_container.sh  init_firewall.sh  install_native_deps.sh  run_in_container.sh  setup-lmi-providers.js  stage_release.sh
icodex-cli/src/: lmi-cli.js  lmi-providers.json  model-bridge.js
icodex-rs/: Cargo.toml  README.md  default.nix  justfile
icodex-rs/ansi-escape/: Cargo.toml  README.md
icodex-rs/apply-patch/: Cargo.toml
icodex-rs/apply-patch/src/: main.rs  parser.rs
icodex-rs/arg0/: Cargo.toml
icodex-rs/arg0/src/: lib.rs
icodex-rs/chatgpt/: Cargo.toml  README.md
icodex-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs  get_task.rs
icodex-rs/chatgpt/tests/suite/: apply_command_e2e.rs
icodex-rs/cli/: Cargo.toml
icodex-rs/cli/src/: debug_sandbox.rs  lib.rs  login.rs  main.rs  mcp_cmd.rs  proto.rs
icodex-rs/cli/tests/: mcp_add_remove.rs  mcp_list.rs
icodex-rs/common/: Cargo.toml  README.md
icodex-rs/common/src/: approval_mode_cli_arg.rs  approval_presets.rs  config_override.rs  config_summary.rs  model_presets.rs  sandbox_mode_cli_arg.rs  sandbox_summary.rs
icodex-rs/core/: Cargo.toml  README.md  prompt.md
icodex-rs/core/src/: apply_patch.rs  auth.rs  chat_completions.rs  client.rs  client_common.rs  codex.rs  codex_conversation.rs  config.rs  config_edit.rs  config_profile.rs  config_types.rs  conversation_history.rs  conversation_manager.rs  custom_prompts.rs  default_client.rs  environment_context.rs  error.rs  event_mapping.rs  exec.rs  git_info.rs  internal_storage.rs  landlock.rs  lib.rs  lmi_bridge_client.rs  mcp_connection_manager.rs  mcp_tool_call.rs  message_history.rs  model_family.rs  model_provider_info.rs  openai_model_info.rs  openai_tools.rs  parse_command.rs  plan_tool.rs  project_doc.rs  safety.rs  seatbelt_base_policy.sbpl  shell.rs  user_instructions.rs
icodex-rs/core/src/codex/: compact.rs
icodex-rs/core/src/exec_command/: session_manager.rs
icodex-rs/core/src/rollout/: list.rs  mod.rs  policy.rs  recorder.rs
icodex-rs/core/src/unified_exec/: mod.rs
icodex-rs/core/tests/: chat_completions_payload.rs  chat_completions_sse.rs
icodex-rs/core/tests/common/: Cargo.toml  lib.rs
icodex-rs/core/tests/suite/: cli_stream.rs  client.rs  compact.rs  compact_resume_fork.rs  exec.rs  (+10 more)
icodex-rs/docs/: codex_mcp_interface.md  protocol_v1.md
icodex-rs/exec/: Cargo.toml
icodex-rs/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_json_output.rs  lib.rs  main.rs
icodex-rs/execpolicy/: Cargo.toml  README.md
icodex-rs/execpolicy/src/: main.rs
icodex-rs/file-search/: Cargo.toml  README.md
icodex-rs/file-search/src/: main.rs
icodex-rs/linux-sandbox/: Cargo.toml  README.md
icodex-rs/linux-sandbox/src/: landlock.rs  lib.rs  linux_run_main.rs  main.rs
icodex-rs/login/: Cargo.toml
icodex-rs/login/src/: lib.rs  server.rs
icodex-rs/mcp-client/: Cargo.toml
icodex-rs/mcp-client/src/: main.rs
icodex-rs/mcp-server/: Cargo.toml
icodex-rs/mcp-server/src/: codex_message_processor.rs  codex_tool_config.rs  codex_tool_runner.rs  exec_approval.rs  lib.rs  main.rs  message_processor.rs  outgoing_message.rs  patch_approval.rs
icodex-rs/mcp-server/tests/common/: Cargo.toml  lib.rs  mcp_process.rs
icodex-rs/mcp-server/tests/suite/: archive_conversation.rs  auth.rs  codex_message_processor_flow.rs  codex_tool.rs  config.rs  create_conversation.rs  interrupt.rs  list_resume.rs  login.rs  mod.rs  send_message.rs  set_default_model.rs  user_agent.rs  user_info.rs
icodex-rs/mcp-types/: generate_mcp_types.py
icodex-rs/ollama/: Cargo.toml
icodex-rs/ollama/src/: client.rs  lib.rs  url.rs
icodex-rs/protocol/: Cargo.toml  README.md
icodex-rs/protocol-ts/: Cargo.toml  generate-ts
icodex-rs/protocol-ts/src/: lib.rs  main.rs
icodex-rs/protocol/src/: config_types.rs  mcp_protocol.rs  models.rs  plan_tool.rs  protocol.rs
icodex-rs/scripts/: create_github_release
icodex-rs/tui/: Cargo.toml
icodex-rs/tui/src/: app.rs  app_backtrack.rs  app_event.rs  chatwidget.rs  cli.rs  clipboard_paste.rs  diff_render.rs  file_search.rs  frames.rs  get_git_diff.rs  history_cell.rs  lib.rs  main.rs  markdown.rs  markdown_stream.rs  resume_picker.rs  session_log.rs  status_indicator_widget.rs  text_formatting.rs  updates.rs  user_approval_widget.rs
scripts/: publish_to_npm.py
(+39 files in other folders)
