[package]
edition = "2024"
name = "iicodex-mcp-server"
version = { workspace = true }

[[bin]]
name = "iicodex-mcp-server"
path = "src/main.rs"

[lib]
name = "iicodex_mcp_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
iicodex-arg0 = { path = "../arg0" }
iicodex-common = { path = "../common", features = ["cli"] }
iicodex-core = { path = "../core" }
iicodex-login = { path = "../login" }
iicodex-protocol = { path = "../protocol" }
mcp-types = { path = "../mcp-types" }
schemars = "0.8.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1.3.0"
tokio = { version = "1", features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
toml = "0.9"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "2"
base64 = "0.22"
mcp_test_support = { path = "tests/common" }
os_info = "3.12.0"
pretty_assertions = "1.4.1"
tempfile = "3"
wiremock = "0.6"
